enterprise/resources/llm/bedrock-guardrail.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bedrock-guardrail
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /guardrail/bedrock
      backendRefs:
        - name: bedrock
          group: agentgateway.dev
          kind: AgentgatewayBackend
      timeouts:
        request: "120s"

---
apiVersion: v1
kind: Endpoints
metadata:
  name: bedrock-guardrail-webhook
  namespace: agentgateway-system
subsets:
- addresses:
  - ip: 192.168.65.254 # unfortunatley this needs to be an IP address :-/
  ports:
  - port: 7273
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bedrock-guardrail-webhook
  namespace: agentgateway-system
spec:
  ports:
  - port: 7273
    targetPort: 7273
    protocol: TCP
