enterprise/resources/llm/openai-opa-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openai-opa-policy
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /opa/openai
      backendRefs:
        - name: openai-all-models
          group: agentgateway.dev
          kind: AgentgatewayBackend
      timeouts:
        request: "120s"
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opa-policy
  namespace: agentgateway-system
subsets:
- addresses:
  - ip: 192.168.65.254 # unfortunatley this needs to be an IP address :-/
  ports:
  - port: 9191
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: opa-policy
  namespace: agentgateway-system
spec:
  ports:
  - port: 9191
    targetPort: 9191
    protocol: TCP
